Fix logger and swagger and add endpoint to the swagger
